style:layout issues mobile search

--- a/Frontend/src/app/modules/search/search.component.scss
+++ b/Frontend/src/app/modules/search/search.component.scss
@@ -578,6 +578,9 @@ div.dialog.darken {
   .switchToCollections{
     display: none;
   }
+  .content_wrapper {
+    width: 100%;
+  }
   .extendedSearch{
     span{
       display:none
